--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "buildCommand": "bash inject-version.sh"
+  "buildCommand": "bash inject-version.sh && mkdir -p .vercel/output/static && cp -r *.html *.js *.css assets data .vercel/output/static/"
 }
