--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "buildCommand": "bash inject-version.sh && mkdir -p .vercel/output/static && cp -r *.html *.js *.css assets data .vercel/output/static/"
+  "buildCommand": "bash inject-version.sh && mkdir -p .vercel/output/static && cp index.html data.json favicon.png .vercel/output/static/ && cp -r assets .vercel/output/static/"
 }
